# brasstacks-log

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchDeps.cmake
include/brasstacks/log/: ConsoleLog.hpp  Log.hpp
src/: CMakeLists.txt  ConsoleLog.cpp  version.hpp.in
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp  tests00_examples.cpp
